--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -6751,23 +6751,32 @@
         }
       }
     },
-    "/providers/Microsoft.AppPlatform/serverVersions": {
+    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.AppPlatform/Spring/{serviceName}/supportedServerVersions": {
       "get": {
         "tags": [
           "AppPlatform"
         ],
         "description": "Lists all of the available server versions supported by Microsoft.AppPlatform provider.",
-        "operationId": "ServerVersions_ListServerVersions",
+        "operationId": "Services_ListSupportedServerVersions",
         "parameters": [
           {
             "$ref": "#/parameters/ApiVersionParameter"
+          },
+          {
+            "$ref": "#/parameters/SubscriptionIdParameter"
+          },
+          {
+            "$ref": "#/parameters/ResourceGroupNameParameter"
+          },
+          {
+            "$ref": "#/parameters/ServiceNameParameter"
           }
         ],
         "responses": {
           "200": {
             "description": "Success. The response describes the details of all supported server versions.",
             "schema": {
-              "$ref": "#/definitions/AvailableServerVersions"
+              "$ref": "#/definitions/SupportedServerVersions"
             }
           },
           "default": {
@@ -6777,9 +6786,12 @@
             }
           }
         },
+        "x-ms-pageable": {
+          "nextLinkName": "nextLink"
+        },
         "x-ms-examples": {
           "ServerVersions_ListServerVersions": {
-            "$ref": "./examples/ServerVersions_ListServerVersions.json"
+            "$ref": "./examples/Services_ListSupportedServerVersions.json"
           }
         }
       }
@@ -13351,20 +13363,26 @@
       },
       "readOnly": true
     },
-    "AvailableServerVersions": {
+    "SupportedServerVersions": {
+      "description": "Supported server versions.",
       "type": "object",
       "properties": {
         "value": {
-          "description": "A list of all supported server versions.",
+          "description": "Collection of the supported server versions.",
           "uniqueItems": false,
           "type": "array",
+          "x-ms-identifiers": [
+            "value"
+          ],
           "items": {
             "$ref": "#/definitions/SupportedServerVersion"
-          },
-          "readOnly": true
+          }
+        },
+        "nextLink": {
+          "description": "URL client should use to fetch the next page (per server side paging).\r\nIt's null for now, added for future use.",
+          "type": "string"
         }
-      },
-      "readOnly": true
+      }
     },
     "SupportedServerVersion": {
       "description": "Supported server version.",
@@ -13376,14 +13394,7 @@
         },
         "server": {
           "description": "The server name.",
-          "enum": [
-            "Tomcat"
-          ],
-          "type": "string",
-          "x-ms-enum": {
-            "name": "SupportedServer",
-            "modelAsString": true
-          }
+          "type": "string"
         },
         "version": {
           "description": "The Server version.",
