use enum for autoSync

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -11637,9 +11637,17 @@
           "default": false
         },
         "autoSync": {
-          "description": "Indicates whether to automatically synchronize certificate from key vault.",
-          "type": "boolean",
-          "default": false
+          "description": "Indicates whether to automatically synchronize certificate from key vault or not.",
+          "enum": [
+            "Disabled",
+            "Enabled"
+          ],
+          "default": "Disabled",
+          "type": "string",
+          "x-ms-enum": {
+            "name": "AutoSyncCertificate",
+            "modelAsString": true
+          }
         }
       },
       "x-ms-discriminator-value": "KeyVaultCertificate"
