--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -6774,7 +6774,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Success. The response describes the details of all supported server versions.",
+            "description": "Success. The response describes the supported server versions.",
             "schema": {
               "$ref": "#/definitions/SupportedServerVersions"
             }
@@ -6790,7 +6790,7 @@
           "nextLinkName": "nextLink"
         },
         "x-ms-examples": {
-          "ServerVersions_ListServerVersions": {
+          "Services_ListSupportedServerVersions": {
             "$ref": "./examples/Services_ListSupportedServerVersions.json"
           }
         }
