--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -6751,6 +6751,51 @@
         }
       }
     },
+    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.AppPlatform/Spring/{serviceName}/supportedServerVersions": {
+      "get": {
+        "tags": [
+          "AppPlatform"
+        ],
+        "description": "Lists all of the available server versions supported by Microsoft.AppPlatform provider.",
+        "operationId": "Services_ListSupportedServerVersions",
+        "parameters": [
+          {
+            "$ref": "#/parameters/ApiVersionParameter"
+          },
+          {
+            "$ref": "#/parameters/SubscriptionIdParameter"
+          },
+          {
+            "$ref": "#/parameters/ResourceGroupNameParameter"
+          },
+          {
+            "$ref": "#/parameters/ServiceNameParameter"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success. The response describes the supported server versions.",
+            "schema": {
+              "$ref": "#/definitions/SupportedServerVersions"
+            }
+          },
+          "default": {
+            "description": "Error response describing why the operation failed.",
+            "schema": {
+              "$ref": "#/definitions/CloudError"
+            }
+          }
+        },
+        "x-ms-pageable": {
+          "nextLinkName": "nextLink"
+        },
+        "x-ms-examples": {
+          "Services_ListSupportedServerVersions": {
+            "$ref": "./examples/Services_ListSupportedServerVersions.json"
+          }
+        }
+      }
+    },
     "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.AppPlatform/Spring/{serviceName}/gateways/{gatewayName}": {
       "get": {
         "tags": [
@@ -13313,6 +13358,46 @@
         },
         "version": {
           "description": "The detailed version (major.minor) of the platform.",
+          "type": "string"
+        }
+      },
+      "readOnly": true
+    },
+    "SupportedServerVersions": {
+      "description": "Supported server versions.",
+      "type": "object",
+      "properties": {
+        "value": {
+          "description": "Collection of the supported server versions.",
+          "uniqueItems": false,
+          "type": "array",
+          "x-ms-identifiers": [
+            "value"
+          ],
+          "items": {
+            "$ref": "#/definitions/SupportedServerVersion"
+          }
+        },
+        "nextLink": {
+          "description": "URL client should use to fetch the next page (per server side paging).\r\nIt's null for now, added for future use.",
+          "type": "string"
+        }
+      }
+    },
+    "SupportedServerVersion": {
+      "description": "Supported server version.",
+      "type": "object",
+      "properties": {
+        "value": {
+          "description": "The raw server version value which could be passed to deployment CRUD operations.",
+          "type": "string"
+        },
+        "server": {
+          "description": "The server name.",
+          "type": "string"
+        },
+        "version": {
+          "description": "The Server version.",
           "type": "string"
         }
       },
