--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -11690,7 +11690,7 @@
           "default": "Disabled",
           "type": "string",
           "x-ms-enum": {
-            "name": "AutoSyncCertificate",
+            "name": "KeyVaultCertificateAutoSync",
             "modelAsString": true
           }
         }
