--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -14649,7 +14649,7 @@
             "modelAsString": true
           }
         },
-        "type": {
+        "acceleratorType": {
           "description": "Type of the customized accelerator.",
           "enum": [
             "Accelerator",
