Hostnames files for ApplicationGatewayListenerPropertiesFormat

--- a/specification/network/resource-manager/Microsoft.Network/stable/2023-06-01/applicationGateway.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2023-06-01/applicationGateway.json
@@ -2144,6 +2144,13 @@
           "readOnly": true,
           "$ref": "./network.json#/definitions/ProvisioningState",
           "description": "The provisioning state of the listener resource."
+        },
+		"hostNames": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "List of Server Name Indications(SNI) for TLS Multi-site Listener that allows special wildcard characters as well."
         }
       },
       "description": "Properties of listener of an application gateway."
