Update the description

--- a/specification/storagetasks/resource-manager/Microsoft.StorageTasks/stable/2023-01-01/storagetasks.json
+++ b/specification/storagetasks/resource-manager/Microsoft.StorageTasks/stable/2023-01-01/storagetasks.json
@@ -484,7 +484,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "The location of the deleted storage account."
+            "description": "The location to perform preview of the actions."
           },
           {
             "name": "parameters",
