--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/stable/2023-09-05/examples/ApplicationGroup_ListByResourceGroup.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/stable/2023-09-05/examples/ApplicationGroup_ListByResourceGroup.json
@@ -2,7 +2,7 @@
   "parameters": {
     "subscriptionId": "daefabc0-95b4-48b3-b645-8a753a63c4fa",
     "resourceGroupName": "resourceGroup1",
-    "api-version": "2023-07-07-preview",
+    "api-version": "2023-09-05",
     "$filter": "applicationGroupType eq 'RailApplication'",
     "pageSize": 10,
     "isDescending": true,
