--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/stable/2023-09-05/examples/Application_Create.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/stable/2023-09-05/examples/Application_Create.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "resourceGroup1",
     "applicationGroupName": "applicationGroup1",
     "applicationName": "application1",
-    "api-version": "2023-07-07-preview",
+    "api-version": "2023-09-05",
     "application": {
       "properties": {
         "description": "des1",
