--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -368,6 +368,10 @@
           "type": "string",
           "description": "The location of the configuration group schema offering."
         },
+        "configurationGroupSchemaResourceReference": {
+          "$ref": "./common.json#/definitions/DeploymentResourceIdReference",
+          "description": "The configuration group schema resource reference."
+        },
         "configurationValue": {
           "type": "string",
           "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string."
