Updated the names of a few properties to align with other properties (#14599)
* Updated the names of a few properties to align with other properties

Renamed the below property names
- topLevelManagementGroupDisplayName to topLevelMgDisplayName
- existingTopLevelManagementGroupParentId to existingTopLevelMgParentId
- existingTopLevelManagementGroupParentId to existingTopLevelMgParentId
- existingTopLevelManagementGroupId to existingTopLevelMgId
-

* Removed billingScopeAccountId and enrollmentAccountId from LZC and added subscriptionBillingScope

Removed billingScopeAccountId and enrollmentAccountId from LZC and added subscriptionBillingScope to the properties bag

--- a/specification/sovereign/Sovereign.Management/examples/2023-09-28-preview/LandingZoneConfiguration_GenerateLandingZone.json
+++ b/specification/sovereign/Sovereign.Management/examples/2023-09-28-preview/LandingZoneConfiguration_GenerateLandingZone.json
@@ -6,23 +6,22 @@
     "name": "LandingZoneConfiguration",
     "body": {
       "infrastructureAsCodeOutputOptions": "Bicep",
-      "billingScopeAccountId": "12345",
-      "enrollmentAccountId": "98765",
+      "subscriptionBillingScope": "12345",
       "deploymentPrefix": "abc",
       "deploymentSuffix": null,
-      "topLevelManagementGroupDisplayName": "Test",
+      "topLevelMgDisplayName": "Test",
       "deploymentLocation": "eastus",
       "organization": "Test",
-      "existingTopLevelManagementGroupParentId": null
+      "existingTopLevelMgParentId": null
     }
   },
   "responses": {
     "200": {
       "headers": {},
       "body": {
-        "topLevelManagementGroupDisplayName": "Microsoft Cloud for Sovereignity",
+        "topLevelMgDisplayName": "Microsoft Cloud for Sovereignity",
         "landingZoneConfigurationName": "LandingZoneConfiguration",
-        "generatedCodeUrl": "https://<storage-account>.blob.core.windows.net"
+        "generatedCodeUrl": "https://storage-account.blob.core.windows.net"
       }
     },
     "202": {
