--- a/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2023-09-28-preview/examples/LandingZoneConfiguration_GenerateLandingZone.json
+++ b/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2023-09-28-preview/examples/LandingZoneConfiguration_GenerateLandingZone.json
@@ -6,23 +6,22 @@
     "name": "LandingZoneConfiguration",
     "body": {
       "infrastructureAsCodeOutputOptions": "Bicep",
-      "billingScopeAccountId": "12345",
-      "enrollmentAccountId": "98765",
+      "subscriptionBillingScope": "12345",
       "deploymentPrefix": "abc",
       "deploymentSuffix": null,
-      "topLevelManagementGroupDisplayName": "Test",
+      "topLevelMgDisplayName": "Test",
       "deploymentLocation": "eastus",
       "organization": "Test",
-      "existingTopLevelManagementGroupParentId": null
+      "existingTopLevelMgParentId": null
     }
   },
   "responses": {
     "200": {
       "headers": {},
       "body": {
-        "topLevelManagementGroupDisplayName": "Microsoft Cloud for Sovereignity",
+        "topLevelMgDisplayName": "Microsoft Cloud for Sovereignity",
         "landingZoneConfigurationName": "LandingZoneConfiguration",
-        "generatedCodeUrl": "https://<storage-account>.blob.core.windows.net"
+        "generatedCodeUrl": "https://storage-account.blob.core.windows.net"
       }
     },
     "202": {
