--- a/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MinimumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MinimumSet_Gen.json
@@ -3,16 +3,14 @@
   "operationId": "BusinessCaseOperations_ListByAssessmentProject",
   "parameters": {
     "api-version": "2023-04-01-preview",
-    "subscriptionId": "7D0AD636-B049-4DD9-8C98-7228548CF294",
-    "resourceGroupName": "rgv2023-04-01-preview",
-    "projectName": "vbrtgzsrsqannyzireqgvfmezcxh"
+    "subscriptionId": "C6BF12D1-08A2-4E12-9EA9-A3823310B6CD",
+    "resourceGroupName": "rgv2023-04-01-preview-1",
+    "projectName": "pdeucbhhiylvdqwupnvxkp"
   },
   "responses": {
     "200": {
       "body": {
-        "value": [
-          {}
-        ]
+        "value": [{}]
       }
     }
   }
