--- a/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MaximumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MaximumSet_Gen.json
@@ -3,9 +3,9 @@
   "operationId": "BusinessCaseOperations_ListByAssessmentProject",
   "parameters": {
     "api-version": "2023-04-01-preview",
-    "subscriptionId": "C6BF12D1-08A2-4E12-9EA9-A3823310B6CD",
-    "resourceGroupName": "rgv2023-04-01-preview-1",
-    "projectName": "ybmyljiwltvhdo"
+    "subscriptionId": "C2EF1C76-1AF2-41AD-9CAE-5FB1FDBB4B95",
+    "resourceGroupName": "rgv2023-04-01-preview",
+    "projectName": "dbcwmuisju"
   },
   "responses": {
     "200": {
@@ -16,60 +16,60 @@
               "settings": {
                 "azureSettings": {
                   "targetLocation": "Unknown",
-                  "discountPercentage": 73,
+                  "discountPercentage": 70,
                   "currency": "Unknown",
                   "businessCaseType": "Unknown",
                   "workloadDiscoverySource": "Unknown",
-                  "performanceDataStartTime": "2023-09-11T08:42:17.947Z",
-                  "performanceDataEndTime": "2023-09-11T08:42:17.947Z",
-                  "comfortFactor": 24,
-                  "performanceUtilizationPercentile": 56,
+                  "performanceDataStartTime": "2023-09-11T09:21:03.774Z",
+                  "performanceDataEndTime": "2023-09-11T09:21:03.774Z",
+                  "comfortFactor": 14,
+                  "performanceUtilizationPercentile": 7,
                   "perYearMigrationCompletionPercentage": {
-                    "key7034": 26
+                    "key2517": 24
                   },
-                  "infrastructureGrowthRate": 85,
-                  "wacc": 85,
-                  "networkCostPercentage": 95,
-                  "iaasLaborCostPercentage": 98,
-                  "paasLaborCostPercentage": 13,
-                  "avsLaborCostPercentage": 22,
+                  "infrastructureGrowthRate": 86,
+                  "wacc": 98,
+                  "networkCostPercentage": 71,
+                  "iaasLaborCostPercentage": 78,
+                  "paasLaborCostPercentage": 69,
+                  "avsLaborCostPercentage": 2,
                   "savingsOption": "Unknown"
                 },
                 "onPremiseSettings": {
                   "computeSettings": {
-                    "hyperthreadCoreToMemoryRatio": 2,
-                    "price": 24,
+                    "hyperthreadCoreToMemoryRatio": 4,
+                    "price": 7,
                     "sqlServerLicensing": [
                       {
                         "version": "Unknown",
-                        "licenseCost": 24,
+                        "licenseCost": 14,
                         "softwareAssuranceCost": 18
                       }
                     ],
                     "windowsServerLicensing": {
-                      "licenseCost": 9,
-                      "softwareAssuranceCost": 19,
-                      "licensesPerCore": 29
+                      "licenseCost": 2,
+                      "softwareAssuranceCost": 24,
+                      "licensesPerCore": 10
                     },
                     "virtualizationSoftwareSettings": {
-                      "numberOfPhysicalCoresPerLicense": 15,
+                      "numberOfPhysicalCoresPerLicense": 27,
                       "softwareAssuranceCost": 18,
                       "licenseAndSupportList": [
                         {
-                          "licenseCost": 12,
+                          "licenseCost": 23,
                           "basicSupportCost": 25,
-                          "productionSupportCost": 15,
+                          "productionSupportCost": 16,
                           "licenseType": "Unknown"
                         }
                       ]
                     },
                     "hypervVirtualizationSoftwareSettings": {
                       "numberOfPhysicalCoresPerLicense": 24,
-                      "softwareAssuranceCost": 9,
+                      "softwareAssuranceCost": 25,
                       "licenseAndSupportList": [
                         {
-                          "licenseCost": 26,
-                          "basicSupportCost": 9,
+                          "licenseCost": 4,
+                          "basicSupportCost": 4,
                           "productionSupportCost": 21,
                           "licenseType": "Unknown"
                         }
@@ -77,23 +77,23 @@
                     }
                   },
                   "storageSettings": {
-                    "costPerGbPerMonth": 18,
-                    "maintainanceCostPercentageToAcquisitionCost": 82
+                    "costPerGbPerMonth": 15,
+                    "maintainanceCostPercentageToAcquisitionCost": 62
                   },
                   "networkSettings": {
-                    "hardwareSoftwareCostPercentage": 15,
-                    "maintenanceCostPercentage": 31
+                    "hardwareSoftwareCostPercentage": 55,
+                    "maintenanceCostPercentage": 51
                   },
                   "facilitySettings": {
-                    "facilitiesCost": 14
+                    "facilitiesCost": 18
                   },
                   "laborSettings": {
-                    "physicalServersPerAdmin": 20,
-                    "virtualMachinesPerAdmin": 25,
-                    "hourlyAdminCost": 9
+                    "physicalServersPerAdmin": 21,
+                    "virtualMachinesPerAdmin": 22,
+                    "hourlyAdminCost": 8
                   },
                   "securitySettings": {
-                    "serverSecurityCostPerServerPerYear": 23,
+                    "serverSecurityCostPerServerPerYear": 20,
                     "sqlServerSecurityCostPerServerPerYear": 4
                   }
                 }
@@ -107,16 +107,16 @@
               ],
               "provisioningState": "Succeeded"
             },
-            "id": "vgvvoyvbs",
-            "name": "pjsjowzjozdijoh",
-            "type": "cn",
+            "id": "kbfintnyprzpvparcdqtgqgyoxjyvj",
+            "name": "ujdlfpfahidsgmnhgivqnln",
+            "type": "yslfrjlmtzfgylachuntxubgij",
             "systemData": {
-              "createdBy": "wbkqskouzjwmttaoeasnjnkrcpoe",
+              "createdBy": "xaesrmkodpkptohjjkkvbxykr",
               "createdByType": "User",
-              "createdAt": "2023-09-11T08:42:17.948Z",
-              "lastModifiedBy": "qpxwgygfflj",
+              "createdAt": "2023-09-11T09:21:03.775Z",
+              "lastModifiedBy": "fejhvlvppw",
               "lastModifiedByType": "User",
-              "lastModifiedAt": "2023-09-11T08:42:17.948Z"
+              "lastModifiedAt": "2023-09-11T09:21:03.776Z"
             }
           }
         ],
