--- a/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MinimumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/AssessmentProjects/preview/2023-04-01-preview/examples/BusinessCaseOperations_ListByAssessmentProject_MinimumSet_Gen.json
@@ -10,7 +10,9 @@
   "responses": {
     "200": {
       "body": {
-        "value": [{}]
+        "value": [
+          {}
+        ]
       }
     }
   }
