Add readonly properties

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -353,18 +353,22 @@
           "description": "The provisioning state of the site resource."
         },
         "publisherName": {
+          "readOnly": true,
           "type": "string",
           "description": "The publisher name for the configuration group schema."
         },
         "publisherScope": {
+          "readOnly": true,
           "$ref": "./common.json#/definitions/PublisherScope",
           "description": "The scope of the publisher."
         },
         "configurationGroupSchemaName": {
+          "readOnly": true,
           "type": "string",
           "description": "The configuration group schema name."
         },
         "configurationGroupSchemaOfferingLocation": {
+          "readOnly": true,
           "type": "string",
           "description": "The location of the configuration group schema offering."
         },
