Adding connectivity status for api-version 2023-08-01-preview  (#14479)
* adding connectivity status

* lint diff correction

* updated TVM and deploymentMode

* updated desc

* add NotSpecified in connectivityStatus

* update deployment mode enum

* updated naming for IsolatedVmAttestationConfiguration

* replaced arm keyword with Azure

---------

Co-authored-by: Bhuvnesh kumar <bhukumar@microsoft.com>

--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/preview/2023-08-01-preview/deploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/preview/2023-08-01-preview/deploymentSettings.json
@@ -503,6 +503,31 @@
         "adouPath"
       ]
     },
+    "DeploymentMode": {
+      "type": "string",
+      "description": "The deployment mode for cluster deployment.",
+      "enum": [
+        "Deploy",
+        "Validate"
+      ],
+      "default": "Deploy",
+      "x-ms-enum": {
+        "name": "DeploymentMode",
+        "modelAsString": true,
+        "values": [
+          {
+            "name": "Validate",
+            "value": "Validate",
+            "description": "Validate deployment settings for cluster."
+          },
+          {
+            "name": "Deploy",
+            "value": "Deploy",
+            "description": "Deploy cluster using deployment settings."
+          }
+        ]
+      }
+    },
     "DeploymentRequest": {
       "type": "object",
       "description": "The deployment request for Azure Stack HCI Cluster.",
@@ -571,6 +596,18 @@
           "description": "DeploymentSetting provisioning state",
           "readOnly": true
         },
+        "arcNodeResourceIds": {
+          "type": "array",
+          "description": "Azure resource ids of Arc machines to be part of cluster.",
+          "items": {
+            "type": "string"
+          },
+          "x-ms-identifiers": []
+        },
+        "deploymentMode": {
+          "$ref": "#/definitions/DeploymentMode",
+          "description": "The deployment mode for cluster deployment."
+        },
         "deploymentConfiguration": {
           "$ref": "#/definitions/DeploymentConfiguration",
           "description": "Scale units will contains list of deployment data",
@@ -583,6 +620,8 @@
         }
       },
       "required": [
+        "arcNodeResourceIds",
+        "deploymentMode",
         "deploymentConfiguration"
       ]
     },
