--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/preview/2023-08-01-preview/examples/PutDeploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/preview/2023-08-01-preview/examples/PutDeploymentSettings.json
@@ -8,6 +8,11 @@
     "resource": {
       "properties": {
         "provisioningState": "Succeeded",
+        "deploymentMode": "Deploy",
+        "arcNodeResourceIds": [
+          "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-1",
+          "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-2"
+        ],
         "deploymentConfiguration": {
           "version": "string",
           "scaleUnits": [
@@ -134,6 +139,11 @@
         },
         "properties": {
           "provisioningState": "Succeeded",
+          "deploymentMode": "Deploy",
+          "arcNodeResourceIds": [
+            "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-1",
+            "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-2"
+          ],
           "deploymentConfiguration": {
             "version": "string",
             "scaleUnits": [
@@ -349,6 +359,11 @@
         },
         "properties": {
           "provisioningState": "Succeeded",
+          "deploymentMode": "Deploy",
+          "arcNodeResourceIds": [
+            "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-1",
+            "/subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/ArcInstance-rg/providers/Microsoft.HybridCompute/machines/Node-2"
+          ],
           "deploymentConfiguration": {
             "version": "string",
             "scaleUnits": [
